@@ -32,14 +32,14 @@ xkbprint_SOURCES =	\
         xkbprint.c \
         xkbprint.h
 
-appman_SOURCES = \
+appman_PRE = \
         xkbprint.man
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST = $(appman_SOURCES)
+EXTRA_DIST = $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
